#6853 closed bug (fixed)
[FileTypes] "Invalid argument" error while creating new filetype with space in internal name
Reported by: | diver | Owned by: | phoudoin |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/FileTypes | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | #6885 | Blocking: | |
Platform: | All |
Description
This is hrev39554 gcc4hybrid.
Attachments (1)
Change History (11)
by , 14 years ago
Attachment: | FileTypes.png added |
---|
comment:1 by , 14 years ago
Resolution: | → invalid |
---|---|
Status: | new → closed |
comment:3 by , 14 years ago
Resolution: | invalid |
---|---|
Status: | closed → reopened |
Reopened, because indeed it must be more clear or simply such error should be avoid to happen.
comment:4 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | reopened → in-progress |
comment:6 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
comment:7 by , 14 years ago
BTW, it's still possible to paste space or any other disallowed characters into this field.
comment:8 by , 14 years ago
IIRC, BeOS BTextView implementation did filter pasted or dropped text according to the disallowed chars.
comment:9 by , 14 years ago
Even if it doesn't do that, that would certainly make sense - even not allowing to paste at all would make more sense than ignoring the disallowed characters completely.
comment:10 by , 14 years ago
Blocked By: | 6885 added |
---|
Note:
See TracTickets
for help on using tickets.
As MIME/internet media type syntax don't allow space either in type/subtype, it's not a bug but an actual valid user alert.
Maybe the field name should be more obvious than group & internal, though.