Add space to disallowed chars for MIME type or subtype. Fix #6853.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39556 a95241bf-73f2-0310-859d-f6bbb57e9c96